[gd_scene load_steps=6 format=3 uid="uid://crqjrd446jcyy"]

[ext_resource type="PackedScene" uid="uid://c3auimvay4uhp" path="res://scenes/money_label.tscn" id="1_da0tx"]
[ext_resource type="Script" path="res://scripts/drawing.gd" id="1_fhym6"]
[ext_resource type="Script" path="res://scripts/pencil_button.gd" id="2_27bku"]
[ext_resource type="Script" path="res://scripts/eraser_button.gd" id="3_73k8m"]
[ext_resource type="PackedScene" uid="uid://cyc3fr8p5vf5" path="res://scenes/popup.tscn" id="5_ulgoo"]

[node name="MainDrawArea" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoneyLabel" parent="." instance=ExtResource("1_da0tx")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -163.0
offset_top = -22.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0

[node name="Drawing" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhym6")

[node name="GridContainer" type="GridContainer" parent="Drawing"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -72.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 70

[node name="PencilButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Pencil"
script = ExtResource("2_27bku")

[node name="EraserButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Eraser"
script = ExtResource("3_73k8m")

[node name="Popup" parent="HBoxContainer/EraserButton" instance=ExtResource("5_ulgoo")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -67.5
offset_bottom = 67.5
grow_vertical = 2

[node name="Label" parent="HBoxContainer/EraserButton/Popup/VBoxContainer" index="0"]
text = "To purchase the eraser DLC, 
please pay an additional 10A"

[connection signal="pressed" from="HBoxContainer/PencilButton" to="HBoxContainer/PencilButton" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/EraserButton" to="HBoxContainer/EraserButton" method="_on_pressed"]
[connection signal="cancel_pressed" from="HBoxContainer/EraserButton/Popup" to="HBoxContainer/EraserButton" method="_on_popup_cancel_pressed"]
[connection signal="ok_pressed" from="HBoxContainer/EraserButton/Popup" to="HBoxContainer/EraserButton" method="_on_popup_ok_pressed"]

[editable path="HBoxContainer/EraserButton/Popup"]
